Versoin 0.4:
	- New module: store all packets from and to certain ip address lists

Version 0.3:
	- Introduce multi-threaded capturing/storing framework
	- Post processing of finished pcap files

Version 0.2:
	- New module for storing the first N bytes of each connection to a pcap file
	- Allow online packet consumption
	- Working statistics

Version 0.1:
	- New module for splitting pcaps into several files according to BPF filters

Version 0.0c-1:
	- Fix: Segmentation Fault

Version 0.0c:
	- Use link type from source file for output files

Version 0.0b:
	- introduced module subsystem
	- pcapsplit can now be configured via ini files

Version 0.0a:
	- split pcap files according to file size