@@ -3,7 +3,7 @@ noinst_LIBRARIES = libmodules.a
 libmodules_a_SOURCES = size_dumper.h size_dumper.c filter_dumper.h filter_dumper.c \
 	dump_classes.h dump_classes.c flowstart_dumper.h flowstart_dumper.c \
 	module_list.h module_list.c dumping_module.h dumping_module.c \
-	iplist_dumper.h iplist_dumper.c
+	iplist_dumper.h iplist_dumper.c stats_module.h stats_module.c
 
 
 AM_CFLAGS=-Wall -Werror -g -I$(top_srcdir)
