@@ -1,5 +1,6 @@
 Versoin 0.4:
 	- New module: store all packets from and to certain ip address lists
+	- New module: calculate statistics on observed traffic flows
 
 Version 0.3:
 	- Introduce multi-threaded capturing/storing framework
